--- a/app/templates/new-module.html
+++ b/app/templates/new-module.html
@@ -5,3 +5,9 @@
 {% else %}
   <h1>Hello, World!</h1>
 {% endif %}
+
+<form action="/new-module" method="post">
+  <input type="text" name="title" placeholder="Title">
+  <input type="text" name="body" placeholder="Body">
+  <input type="submit" value="Submit">
+</form>
